# narinfo-tools

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: build.yml
src/: main.rs  narinfo.rs
